[package]
name = "utlnwallet"
version = "0.0.10"
authors = ["Richard Ulrich <richi+utwallet@ulrichard.ch>"]
edition = "2021"
build = "src/build.rs"

[dependencies]
qmetaobject = "0.2.3"
qt_core = "0.5.0"
gettext-rs = "0.7"
cstr = "0.2.8"
cpp = "0.5"
ldk-node = "0.2"
serde = "1.0"
serde_json = "1.0"
qrcode-png = "0.4"
chrono = "0.4"
regex = "1"
rand_core = "0.6"
lnurl-rs = "0.5"
cmc = "0.3"
electrum2descriptors = { git = "https://github.com/RCasatta/electrum2descriptors", rev = "e25b7c5273f4fbdff6c53c870a8025e00770b463" }
# the following are also dependencies of ldk-node that are not exposed. The versions have to be matched manually
bdk = { version = "0.29", default-features = false, features = ["std", "use-esplora-async", "keys-bip39"] }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "time", "sync"] }
miniscript = "9.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

[build-dependencies]
cpp_build = "0.5"
cmake = "0.1"

[dev-dependencies]
electrsd = { version= "0.23", features = ["bitcoind_23_0", "esplora_a33e97e1", "legacy"] }
rstest = "0.11"
