[package]
name = "utlnwallet"
version = "0.0.15"
authors = ["Richard Ulrich <richi+utwallet@ulrichard.ch>"]
edition = "2021"
build = "src/build.rs"

[dependencies]
qmetaobject = "0.2.3"
qt_core = "0.5.0"
gettext-rs = "0.7"
cstr = "0.2.8"
cpp = "0.5"
ldk-node = "0.4"
serde = "1.0"
serde_json = "1.0"
qrcode-png = "0.4"
chrono = "0.4"
regex = "1"
rand_core = "0.6"
lnurl-rs = "0.9"
cmc = "0.4"
electrum2descriptors = "0.7"
# the following are also dependencies of ldk-node that are not exposed. The versions have to be matched manually
bdk_esplora = { version = "=0.18.0", default-features = false, features = ["async-https-rustls"]}
bdk_wallet = { version = "=1.0.0-beta.4", default-features = false, features = ["std", "keys-bip39"]}
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "time", "sync"] }
miniscript = "12.3"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

[build-dependencies]
cpp_build = "0.5"
cmake = "0.1"

[dev-dependencies]
electrsd = { version= "0.29", features = ["bitcoind_23_1", "esplora_a33e97e1", "legacy"] }
rstest = "0.11"
